# DL_ND_models_comparison

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README_de.md  README_en.md  README_ja.md  README_ru.md
documents/: what_to_do.md
include/io/: csv_writer.hpp
include/models/: bb_model.hpp  dl_model.hpp  nd_model.hpp
report/EN/: EN_text.tex
report/RU/: RU_text.tex
scripts/: animate_scatter.py  stats_dashboard.py
src/: bb_model.cpp  dl_model.cpp  main.cpp  nd_model.cpp
